--- a/Index.html
+++ b/Index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Moises Eduardo Morales Alvizures</h1>
     <h2>2024279</h2>
+    <p>Estamos en el laboratorio C27 dentro de Kinal</p>
 </body>
 </html>
